# pangoviewdemo

./: CMakeLists.txt  build-vc2019-win64-debug.bat  build-vc2019-win64-release.bat  input.txt  pangotest.cpp  pangoviewdemo.bat  windows-fonts.conf
.github/workflows/: vcpkg-install.yml
